finished: game logic and winner message

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="score">
         <!-- PLAYER ONE -->
         <div id="playerOne">
-          <h2 id="playerOne-name">Nome Jogador 1/h2>
+          <h2 id="playerOne-name">Nome Jogador 1</h2>
           <span id="playerOne-score">0</span>
 
           <ul id="playerOne-choice">
@@ -45,7 +45,7 @@
 
         <!-- PLAYER TWO -->
         <div id="playerTwo">
-          <h2 id="playerTwo-name">Nome Jogador 2/h2>
+          <h2 id="playerTwo-name">Nome Jogador 2</h2>
           <span id="playerTwo-score">0</span>
 
           <ul id="playerTwo-choice">
@@ -65,17 +65,15 @@
               /></a>
             </li>
           </ul>
-
         </div>
 
         <!-- /PLAYER TWO -->
       </div>
 
-      <div>
-        <input type="button" value="Jogar">
+      <div id="playDiv">
+        <button id="playButton" onclick="play(1,2)">Jogar</button>
       </div>
-      <div id="messages">Mensagens
-      </div>
+      <div id="messages">Mensagens</div>
     </main>
     <script src="main.js"></script>
   </body>
