--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
       <div id="score">
         <!-- PLAYER ONE -->
         <div id="playerOne">
-          <h2 id="playerOne-name">Nome Jogador 1</h2>
+          <h2 id="playerOne-name">Jogador 1</h2>
           <span id="playerOne-score">0</span>
 
           <ul id="playerOne-choice">
             <li>
-              <a id="playerOne-choice-1" onclick="firstPlayerChoise(1)"
+              <a id="playerOne-choice-1" onclick="firstPlayerChoice(1)"
                 ><img src="./images/rock.png" alt=""
               /></a>
             </li>
             <li>
-              <a id="playerOne-choice-2" onclick="firstPlayerChoise(2)"
+              <a id="playerOne-choice-2" onclick="firstPlayerChoice(2)"
                 ><img src="./images/paper.png" alt=""
               /></a>
             </li>
             <li>
-              <a id="playerOne-choice-3" onclick="firstPlayerChoise(3)"
+              <a id="playerOne-choice-3" onclick="firstPlayerChoice(3)"
                 ><img src="./images/scissors.png" alt=""
               /></a>
             </li>
@@ -45,22 +45,22 @@
 
         <!-- PLAYER TWO -->
         <div id="playerTwo">
-          <h2 id="playerTwo-name">Nome Jogador 2</h2>
+          <h2 id="playerTwo-name">Jogador 2</h2>
           <span id="playerTwo-score">0</span>
 
           <ul id="playerTwo-choice">
             <li>
-              <a id="playerTwo-choice-1" onclick="secondPlayerChoise(1)"
+              <a id="playerTwo-choice-1" onclick="secondPlayerChoice(1)"
                 ><img src="./images/rock.png" alt=""
               /></a>
             </li>
             <li>
-              <a id="playerTwo-choice-2" onclick="secondPlayerChoise(2)"
+              <a id="playerTwo-choice-2" onclick="secondPlayerChoice(2)"
                 ><img src="./images/paper.png" alt=""
               /></a>
             </li>
             <li>
-              <a id="playerTwo-choice-3" onclick="secondPlayerChoise(3)"
+              <a id="playerTwo-choice-3" onclick="secondPlayerChoice(3)"
                 ><img src="./images/scissors.png" alt=""
               /></a>
             </li>
@@ -73,7 +73,11 @@
       <div id="playDiv">
         <button id="playButton" onclick="play(1,2)">Jogar</button>
       </div>
+
       <div id="messages">Mensagens</div>
+      <div id="resetDiv">
+        <button id="reset" onclick="reset()">Limpar</button>
+      </div>
     </main>
     <script src="main.js"></script>
   </body>
